deploy/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: devops-web
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:
      labels:
        app: devops-app
        commit: latest
    spec:
      containers:
        - name: app
          image: public.ecr.aws/g3n2k4q3/devops_hobbies
          imageTag: latest
          command: [ "poetry", "run" ]
          args: [ "uvicorn", "app:app", "--reload", "--host", "0.0.0.0", "--port", "8000" ]
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP

  strategy:
    blueGreen:
      activeService: devops-svc-active
      previewService: devops-svc-preview
      autoPromotionEnabled: true
      scaleDownDelaySeconds: 60
